--- a/packages/web-client/src/Onboarding.css
+++ b/packages/web-client/src/Onboarding.css
@@ -4,6 +4,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     overflow-y: auto;
+    overflow-x: hidden;
     min-height: 100vh;
     width: 100vw;
     margin: 0;
@@ -47,5 +48,10 @@ body {
     padding-bottom: 20px;
     margin: 0;
     padding-left: 250px;
+}
+
+.text-content {
+    font-size: 20px;
+    
 }
   
