--- a/packages/web-client/src/index.css
+++ b/packages/web-client/src/index.css
@@ -24,10 +24,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -36,18 +32,19 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  border: 2px solid white;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  justify-content: space-between;
+  width: 160px;
+  align-items: center;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #4379D5;
+  color: #4379D5;
+  transition: border-color 0.25s;
 }
 button:focus,
 button:focus-visible {
