--- a/packages/web-client/src/components/contact/Contact.module.css
+++ b/packages/web-client/src/components/contact/Contact.module.css
@@ -1,7 +1,7 @@
 .contact {
     background: url('../../assets/bg2.png') no-repeat center/cover;
-    width: 100%;
-    height: 600px;
+    width: 100vw;
+    height: 100vh;
     display: list-item;
     padding: 50px;
     padding: 30px 50px;
