--- a/packages/web-client/src/components/about/About.module.css
+++ b/packages/web-client/src/components/about/About.module.css
@@ -21,6 +21,19 @@
     line-height: 2;
 }
 
+@media (max-width: 1366px) {
+    .content {
+        flex-direction: column;
+        align-items: center; 
+        text-align: center;
+    }
+
+    .video {
+        padding-left: 0;
+        padding-top: 20px;
+    }
+}
+
 .video {
     padding-left: 50px;
 }
