--- a/packages/web-client/src/components/roadmap/Roadmap.module.css
+++ b/packages/web-client/src/components/roadmap/Roadmap.module.css
@@ -1,9 +1,10 @@
 .roadmap {
     width: 100vw;
     height: 100vh;
-    display: list-item;
     padding: 50px;
     padding: 30px 50px;
+    scroll-snap-align: center;
+    scroll-behavior: smooth;
 }
 
 .header {
