--- a/packages/web-client/src/index.css
+++ b/packages/web-client/src/index.css
@@ -17,6 +17,12 @@ body {
   margin: 0;
 }
 
+html {
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
+  scroll-snap-stop: always;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
