--- a/packages/web-client/src/components/about/About.module.css
+++ b/packages/web-client/src/components/about/About.module.css
@@ -31,6 +31,12 @@
         text-align: center;
     }
 
+    .header {
+        flex-direction: column;
+        align-items: center; 
+        text-align: center;
+    }
+
     .video {
         padding-left: 0;
         padding-top: 20px;
