--- a/packages/web-client/src/components/backstory/Backstory.module.css
+++ b/packages/web-client/src/components/backstory/Backstory.module.css
@@ -15,5 +15,27 @@
     right: 0;
     margin: 0;
     font-size: larger;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
+}
+
+.story {
+    height: 70vh;
+    width: 65vw;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6), transparent);
+    padding: 20px 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+}
+
+.text {
+    font-family: 'Alexandria', sans-serif;
+    text-align: justify;
+    font-weight: 350;
+    font-size: 1.3em;
+    line-height: 1.5;
+}
+
+.city {
+    font-size: 2.7em;
 }
