--- a/packages/web-client/src/components/hero/Hero.module.css
+++ b/packages/web-client/src/components/hero/Hero.module.css
@@ -92,12 +92,12 @@
     font-family: 'Alexandria', sans-serif;
     font-weight: bold;
     border: 3px solid white;
-    font-size: 1.3em;
+    font-size: 1em;
     cursor: pointer;
     transition: border-color 0.25s;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    width: 200px;    
+    width: 300px;    
 }
 .button:hover {
     border-color: #4379D5;
