--- a/packages/web-client/src/components/wallet/WalletSelector.module.css
+++ b/packages/web-client/src/components/wallet/WalletSelector.module.css
@@ -51,6 +51,7 @@
 
 .walletActions {
   display: flex;
+  flex-direction: column;
   gap: 8px;
 }
 
@@ -70,13 +71,16 @@
 
 .connectButton {
   width: 100%;
-  padding: 12px;
-  background-color: #0080ff;
-  color: white;
+  padding: 0.6em 1.2em;
+  color: #ffffff;
   border: none;
-  border-radius: 8px;
   cursor: pointer;
   font-weight: bold;
+  font-weight: bold;
+  margin-left: auto;
+  margin-right: auto;
+  border: 3px solid white;
+  font-size: 1em;
 }
 
 .connectButton:hover {
@@ -85,25 +89,21 @@
 
 .button {
   color: #ffffff;
-  justify-content: space-between;
   font-weight: bold;
   margin-left: auto;
   margin-right: auto;
-  padding: auto;
   padding: 0.6em 1.2em;
   display: flex;
   font-family: "Alexandria", sans-serif;
-  font-weight: bold;
   border: 3px solid white;
-  font-size: 1.3em;
+  font-size: .8em;
   cursor: pointer;
   transition: border-color 0.25s;
-  justify-content: space-between;
-  align-items: center;
   width: 200px;
+  justify-content: center;
 }
 .button:hover {
-  border-color: #4379d5;
+  border-color: #1e4a96, 0.8;
   color: #4379d5;
   transition: border-color 0.25s;
 }
